Add complete backend with real-time messaging
 Features Added:
- Complete Node.js/TypeScript backend server
- Firebase Admin SDK integration with Firestore
- Socket.IO real-time messaging system
- Express API endpoints (auth, messages, users)
- Authentication middleware with token verification
- Message controller with Firebase & in-memory fallback
- Socket helper for real-time event emission
- TypeScript configuration and build setup

 Frontend Enhancements:
- API service for backend communication
- useMessages hook with real-time Socket.IO integration
- Environment configuration for API base URL
- Socket.io-client integration for live updates

 Testing & Development:
- Real-time browser testing interface
- Connection and Firebase integration tests
- Development scripts and automation tools
- Comprehensive error handling and logging

 Security & Configuration:
- Safe Firebase credentials handling
- CORS configuration for cross-origin requests
- Environment-based configuration management
- Git security with proper .gitignore updates

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,7 @@ yarn-error.*
 
 app-example
 server/node_modules
+
+# Firebase service account credentials (sensitive)
+**/serviceAccount*.json
+**/serviceAccountKey.json
