--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "expo-web-browser": "~14.2.0",
     "firebase": "^12.2.1",
     "nativewind": "^4.1.23",
+    "node-fetch": "^3.3.2",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "react": "19.0.0",
     "react-dom": "19.0.0",
@@ -55,6 +56,7 @@
     "react-native-web": "~0.20.0",
     "react-native-webview": "^13.13.5",
     "react-router-dom": "^7.9.1",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
@@ -62,6 +64,8 @@
     "@types/react": "~19.0.10",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
+    "nodemon": "^3.1.10",
+    "ts-node": "^10.9.2",
     "typescript": "~5.8.3"
   },
   "private": true
