feat: Complete basic-rn folder refresh with Expo SDK 54 upgrade
- Updated Expo SDK from 53 to 54 with full dependency resolution
- Enhanced Firebase configuration with comprehensive error handling
- Updated all React Native and Expo dependencies to latest versions
- Improved real-time messaging infrastructure with Socket.IO
- Fixed package-lock.json with all compatibility updates
- Updated app.json with SDK version specification
- Enhanced chat functionality and API services
- All files cleared and re-added for clean Git history

--- a/app.json
+++ b/app.json
@@ -3,6 +3,7 @@
     "name": "basic-rn",
     "slug": "basic-rn",
     "version": "1.0.0",
+    "sdkVersion": "54.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
     "scheme": "basicrn",
